@@ -1,0 +1,14 @@
+using System;
+using System.Reflection;
+using System.Runtime.InteropServices;
+
+[assembly: CLSCompliant(false)]
+[assembly: ComVisible(false)]
+[assembly: AssemblyTitle("NVelocity")]
+[assembly: AssemblyDescription("")]
+[assembly: AssemblyCompany("Castle Project")]
+[assembly: AssemblyProduct("NVelocity")]
+[assembly: AssemblyCopyright("Castle Project, original author or authors")]
+[assembly: AssemblyVersion("1.0.0.0")]
+[assembly: AssemblyFileVersion("1.0.0.0")]
+[assembly: AssemblyDelaySign(false)]
